2001-07-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSProcessInfo.m: Added -processIdentifier for compatibility
	with MacOS-X
	* Source/NSTask.m: Added -processIdentifier, -suspend, and -resume
	for compatibility with MacOS-X
	* Source/NSPortNameServer.m: Modified removal methods to return a
	boolean success/failure status for MacOS-X compatibility.

2001-07-14  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/objc-gnu2next.h: More function defs.
	* Headers/gnustep/base/objc-load.h (objc_get_symbol_path): Correct
	def to match function decl.
	* Source/NSDistantObject.m (-selectorTypeForProxy:): Declare
	variable in NeXT implementation.
	* Source/NSInvocation.m (-invokeWithTarget:): Special def for NeXT.
	* Source/thr-pthread.m: Add forward decl of __objc_thread_detach.

2001-07-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAttributedString.m: ([addAttributes:range:]) corrected
	bogus range check (report by Michael Scheibler)
	* Source/NSString.m: ([descriptionWithLocale:...]) as special case
	quote strings beginning with a slash ...  property lists can
	otherwise confuse strings with leading slashes as comments.

2001-07-11  Adam Fedor  <fedor@gnu.org>

	* Source/objc-load.m: Include objc-load.h on NeXT systems.

2001-07-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: ([fileSystemRepresentationWithPath:])
	MINGW fix contributed by Michael Scheibler

2001-07-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Update date/time designations to arrays
	* Source/NSDate.m: Update to use date/time designation arrays.

2001-07-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/objc-load.m: Remove bogus include of objc-load.h
	on non-NeXT systems.

2001-07-09  Adam Fedor  <fedor@gnu.org>

	* configure.in: Check for pthread.h - for compiling on Darwin.
	* Source/GNUmakefile: Compile thr-pthread.m conditionally.
	* Source/thr-pthread.m: New file.

	* Source/null-load.h (__objc_dynamic_get_symbol_path): New def.