@@ -631,6 +631,17 @@ compareIt(id o1, id o2, void* context)
   return [desc writeToFile: path atomically: useAuxiliaryFile];
 }
 
+- (BOOL) writeToURL: (NSURL *)url atomically: (BOOL)useAuxiliaryFile
+{
+  NSDictionary	*loc;
+  NSString	*desc;
+
+  loc = [[NSUserDefaults standardUserDefaults] dictionaryRepresentation];
+  desc = [self descriptionWithLocale: loc indent: 0];
+
+  return [desc writeToURL: url atomically: useAuxiliaryFile];
+}
+
 - (NSString*) description
 {
   return [self descriptionWithLocale: nil indent: 0];
